# Flight-Recorder

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-01-flight-recorder.md  2026-07-02-flightrec-v2-vector-clocks.md
docs/superpowers/specs/: 2026-07-01-flight-recorder-design.md
flightrec/: boundaries.py  cli.py  clock.py  diff.py  fork.py  interceptor.py  models.py  replay.py  store.py
flightrec/agent/: reference_agent.py  tools.py
flightrec/static/: app.js  index.html  style.css
flightrec/web/: __init__.py  graph.py  schemas.py  server.py
tests/: conftest.py  test_boundaries.py  test_cli_run_show.py  test_clock.py  test_concurrency.py  test_fork.py  test_interceptor.py  test_models.py  test_record_replay.py  test_reference_agent.py  test_store.py  test_vector_clock.py  test_web_api.py  test_web_graph.py
