[project]
name = "flightrec"
version = "0.1.0"
description = "Record / replay / time-travel debugger for multi-agent systems"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
flightrec = "flightrec.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flightrec*"]
